fix overflow x

--- a/src/routing/Routeroutlet/style.scss
+++ b/src/routing/Routeroutlet/style.scss
@@ -9,4 +9,5 @@
     padding: 5px 5px;
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
 }
